--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.3",
+    "cross-env": "^7.0.3",
+    "ember-auto-import": "^2.0.0",
     "ember-cli": "~3.28.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.6",
@@ -38,14 +39,17 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-cookies": "^0.5.2",
     "ember-data": "~3.28.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
+    "ember-highcharts": "^3.2.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.2.2",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
+    "ember-simple-auth": "^4.1.1",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
     "ember-welcome-page": "^4.0.0",
@@ -59,12 +63,17 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0"
+    "qunit-dom": "^1.6.0",
+    "tracked-built-ins": "^1.1.1",
+    "webpack": "^5.66.0"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "highcharts": "^9.3.2"
   }
 }
